[package]
name = "grabber"
version = "0.1.0"
authors = ["Am0rfu5"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.6.0"
rayon = "1.3.0"
rand = "0.8.0"
clap = "4.5.0"
csv = "1.1"
reqwest = {version = "0.11.00000", features = ["blocking"]}

